--- a/flowers/Leave Messag.html
+++ b/flowers/Leave Messag.html
@@ -146,7 +146,7 @@
                            data-fv-message="不能为空" data-fv-field="para115">
                 </div>
                 <div class="fromGroup1">
-                    <textarea name="para117" class="form-control" data-fv-notempty="true" data-fv-message="不能为空"
+                    <textarea style="resize: none" name="para117" class="form-control" data-fv-notempty="true" data-fv-message="不能为空"
                               placeholder="您的建议 " rows="5" data-fv-field="para117"></textarea>
                 </div>
                 <div class="fromGroup2">
